--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,20 @@ body,
   background-color: #dedede;
   border: 5px solid #999; }
 
-#instruction-text {
+.caption {
+  top: 0;
+  left: 0;
   position: absolute;
-  top: 60%;
+  width: 100%;
+  height: 100%;
+  background-color: #abb78a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 24px; }
+
+#instruction-text {
   color: #333;
   width: 80%;
   left: 20px;
@@ -65,12 +76,7 @@ body,
   animation: blink 1.5s infinite; }
 
 #logo {
-  position: absolute;
   width: 150px;
-  top: 30%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
   opacity: 0.8;
   animation: blink 1.5s infinite; }
 
