--- a/css/style.scss
+++ b/css/style.scss
@@ -56,9 +56,20 @@ body,
   background-color: #dedede;
   border: 5px solid #999;
 }
-#instruction-text {
+.caption {
+  top: 0;
+  left: 0;
   position: absolute;
-  top: 60%;
+  width: 100%;
+  height: 100%;
+  background-color: #abb78a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 24px;
+}
+#instruction-text {
   color: #333;
   width: 80%;
   left: 20px;
@@ -70,12 +81,7 @@ body,
 }
 
 #logo {
-  position: absolute;
   width: 150px;
-  top: 30%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
   opacity: 0.8;
   animation: blink 1.5s infinite;
 }
